# fey

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
test/: AddKernel.cu  CMakeLists.txt  CudaTest.cpp  GTestCustomMain.cpp  SimpleTest.cpp  StdexecTest.cpp
